Bug 1157994 - Ensure AudioContext operations are started and resolved in the same order. r=roc